@@ -26,6 +26,9 @@ PP/02 Restore caching of spamd results with expanded spamd_address.
 PP/03 Build issue: lookups-Makefile now exports LC_ALL=C
       Improves build reliability.  Fix from: Frank Elsner
 
+PP/04 Bugzilla 230: Support TLS-enabled LDAP (in addition to ldaps).
+      Code patches from Adam Ciarcinski of NetBSD.
+
 
 Exim version 4.74
 -----------------
